# jamun

./: .gitignore  .pre-commit-config.yaml  README.md  debugging_file.txt  pyproject.toml  requirements-analysis.in  requirements-dev.in  requirements.in
analysis/: JAMUNReference_2AA_sampling_times.csv  README.md  analysis_sweep.py  analysis_sweep.sh  js_compute.py  load_trajectory.py  loader.py  make_plots.ipynb  makeplots-new.ipynb  makeplots.ipynb  makeplots.py  mdgen_analysis.ipynb  pyemma_helper.py  run_analysis.py  run_analysis.sh  sample_runs.csv  train_runs.csv  utils.py  wandb_runs.csv
analysis/sampling_times/: JAMUN.csv
configs/: train_2AA.yaml  train_4AA.yaml
configs/experiment/: sample_2AA.yaml  sample_4AA.yaml  sample_capped_2AA.yaml  sample_custom.yaml  sample_mdgen.yaml  sample_uncapped_2AA.yaml  sample_uncapped_4AA.yaml  sample_uncapped_5AA.yaml  train_2AA.yaml  train_4AA.yaml  train_capped_2AA.yaml  train_chignolin.yaml  train_idrome.yaml  train_idrome_cg.yaml  train_macrocycles.yaml  train_mdgen.yaml  train_test.yaml  train_test_single_shape.yaml  train_uncapped_2AA.yaml  train_uncapped_4AA.yaml
env/: build-requirements.sh  requirements-analysis.txt  requirements-dev.txt  requirements.txt
env/linux-cuda/: build-requirements.sh  constraints-analysis.txt  requirements-analysis.txt  requirements-dev.txt  requirements.txt
prescient-e3tools/: README.md  ci.yml  pyproject.toml  requirements-dev.in  requirements.in
prescient-e3tools/env/: build-requirements.sh  constraints.txt  requirements.txt
prescient-e3tools/scripts/: benchmark.py
prescient-e3tools/src/e3tools/: __init__.py
prescient-e3tools/src/e3tools/contrib/equifold/: __init__.py
prescient-e3tools/src/e3tools/nn/: _conv.py  _gate.py  _layer_norm.py  _transformer.py
prescient-e3tools/tests/: test_basic.py
profiling/: README.md  profile.sh  profile_training.py  standalone_training.py
scripts/: chunk_trajectory.py  prepare_pdb.py  process_fast_folding_proteins.py  process_mdgen.py  relax_structures.py
scripts/IDRome/: README.md  combine_frames.py  combine_frames.sh  copy_trajectories.py  copy_trajectories.sh  extract_frames.py  relax_structures.py  relax_structures.sh  relax_structures_batched.sh  to_all_atom.py  to_all_atom.sh  to_all_atom_batched.sh
scripts/generate_data/: equilrun.py  openmm_utils.py  restart.py  run_simulation.py
scripts/slurm/: README.md  sample.sh  sample_capped_2AA.sh  sample_mdgen.sh  sample_uncapped_2AA.sh  sample_uncapped_4AA.sh  sample_uncapped_5AA.sh  train.sh  train_capped_2AA.sh  train_idrome.sh  train_idrome_cg.sh  train_macrocycles.sh  train_mdgen.sh  train_uncapped_2AA.sh
slurm/: sample.sh  train.sh
src/jamun/: __init__.py  utils.py  utils_md.py  utils_residue.py
src/jamun/archs/: __init__.py  e3nn.py  ophiuchus.py
src/jamun/callbacks/: __init__.py  _ema.py  _plot_grad_norm_distribution.py  _plot_loss_distribution.py  _timing.py  _visualize_denoise.py
src/jamun/callbacks/sampler/: __init__.py  _chemical_validity.py  _md_visualize_samples.py  _measure_sampling_time.py  _plot_score_distribution.py  _posebusters.py  _ramachandran.py  _save_trajectory.py  _score_distribution.py  _trajectory_animation.py  _utils.py  _visualize_samples.py
src/jamun/cmdline/: sample.py  train.py  train_mc.py
src/jamun/data/: _MDpointcloud_traj.py  __init__.py  _ala2cg.py  _cremp.py  _mcutils.py  _mdtraj.py  _random_chain_dataset.py  _utils.py
src/jamun/distributions/: __init__.py  _distributions.py
src/jamun/e3tools/nn/: __init__.py  _conv.py  _extract_irreps.py  _gate.py  _layer_norm.py  _pack_unpack.py  _scaling.py
src/jamun/hydra/: __init__.py  utils.py
src/jamun/hydra_config/: sample.yaml  sample_MD.yaml  train.yaml
src/jamun/hydra_config/batch_sampler/: multi_measurement_oat_sampler.yaml  single_measurement_sampler.yaml  vesde_reverse_diffusion_sampler.yaml
src/jamun/hydra_config/callbacks/: default.yaml  early_stopping.yaml  ema.yaml  ema_model_checkpoint.yaml  fid_denoise.yaml  lr_monitor.yaml  model_checkpoint.yaml  plot_grad_norm_distribution.yaml  plot_loss_distribution.yaml  timing.yaml  visualize_denoise.yaml  viz.yaml
src/jamun/hydra_config/data/: ala2cg.yaml  md.yaml
src/jamun/hydra_config/logger/: wandb.yaml
src/jamun/hydra_config/model/: denoiser.yaml  denoiser_pretrained.yaml  e3ncsm.yaml  e3ncsm_pretrained.yaml
src/jamun/hydra_config/paths/: default.yaml
src/jamun/hydra_config/trainer/: default.yaml
src/jamun/lr_schedules/: __init__.py  _lr_schedules.py
src/jamun/metrics/: __init__.py  _chemical_validity.py  _mdgen_analysis.py  _posebusters.py  _ramachandran.py  _save_trajectory.py  _score_distribution.py  _trajectory_animation.py  _utils.py  _visualize_denoise.py  _visualize_samples.py
src/jamun/model/: __init__.py  atom_embedding.py  denoiser.py  e3ncsm.py  fp16_util.py  gate_activation.py  noise_conditioning.py  sigma_embedding.py  skip_connection.py
src/jamun/model/arch/: __init__.py  e3conv.py  ophiuchus.py
src/jamun/optim/: __init__.py  adagrad.py  adamw.py
src/jamun/sampling/: __init__.py  _sampler.py
src/jamun/transforms/: add_edges.py
src/jamun/utils/: __init__.py  align.py  average_squared_distance.py  checkpoint.py  data_with_residue_info.py  dist_log.py  featurize_macrocycles.py  mdtraj.py  mean_center.py  plot.py  rdkit.py  residue_metadata.py  sampling_wrapper.py  scaled_rmsd.py  slurm.py  unsqueeze_trailing.py
(+41 files in other folders)
